language/move-lang/tests/move_check/translated_ir_tests/move/generics/instantiation_loops/recursive_struct.exp
error[E04018]: cyclic data
  ┌─ tests/move_check/translated_ir_tests/move/generics/instantiation_loops/recursive_struct.move:4:21
  │
4 │     struct Foo { f: Foo }
  │                     ^^^
  │                     │
  │                     Invalid field containing 'Foo' in struct 'Foo'.
  │                     Using this struct creates a cycle: 'Foo' contains 'Foo'

error[E04018]: cyclic data
   ┌─ tests/move_check/translated_ir_tests/move/generics/instantiation_loops/recursive_struct.move:10:25
   │
10 │     struct Foo { f: Cup<Foo> }
   │                         ^^^
   │                         │
   │                         Invalid field containing 'Foo' in struct 'Foo'.
   │                         Using this struct creates a cycle: 'Foo' contains 'Foo'

error[E04018]: cyclic data
   ┌─ tests/move_check/translated_ir_tests/move/generics/instantiation_loops/recursive_struct.move:22:41
   │
22 │     struct X has key, store { y: vector<Y> }
   │                                         ^
   │                                         │
   │                                         Invalid field containing 'Y' in struct 'X'.
   │                                         Using this struct creates a cycle: 'Y' contains 'X' contains 'Y'

error[E04018]: cyclic data
   ┌─ tests/move_check/translated_ir_tests/move/generics/instantiation_loops/recursive_struct.move:41:29
   │
41 │     struct Foo { f: M1::Cup<Foo> }
   │                             ^^^
   │                             │
   │                             Invalid field containing 'Foo' in struct 'Foo'.
   │                             Using this struct creates a cycle: 'Foo' contains 'Foo'

error[E04018]: cyclic data
   ┌─ tests/move_check/translated_ir_tests/move/generics/instantiation_loops/recursive_struct.move:50:26
   │
50 │     struct C { d: vector<D> }
   │                          ^
   │                          │
   │                          Invalid field containing 'D' in struct 'C'.
   │                          Using this struct creates a cycle: 'D' contains 'A' contains 'B' contains 'C' contains 'D'

